# tide-rest-api

./: Cargo.toml  README.md
.github/workflows/: rust_build.yml  rust_clippy.yml
src/: main.rs
src/api/handlers/: mod.rs  redis_handlers.rs  root_handlers.rs
src/models/: redis_key.rs
src/routes/: mod.rs  redis_routes.rs  root_routes.rs
src/services/: redis_service.rs
