[package]
name = "tide_rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tide =  { version = "0.15.0" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.96" }
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
